--- a/inyro/inyro222.css
+++ b/inyro/inyro222.css
@@ -14,6 +14,23 @@
   align-items: center;
 }
 
-.header h1, p {
+.header h1, span {
   margin: 0;
+}
+
+.header main {
+  padding: 1rem;
+  height: 100%;
+}
+
+.header body {
+  background: #EEE;
+}
+
+.header body, html {
+  height: 200%;
+}
+
+.header * {
+  box-sizing: border-box;
 }
