--- a/inyro/yunjinbar.css
+++ b/inyro/yunjinbar.css
@@ -3,13 +3,14 @@
 margin: 0;
 padding: 0;
 font-family: "Helvetica Neue", Helvetica, sans-serif;
+/* align-content: center; */
 }
 
 #menu{
 
 position: relative;
 text-align: center;
-margin: 100px;
+margin: 1000px;
 }
 
 #menu-line{
