--- a/inyro/yunjinbar.css
+++ b/inyro/yunjinbar.css
@@ -34,7 +34,8 @@ margin-right: 30px;
 
 ul li a{
 display: block;
-font-size: 20px;
+font-size: 30px;
+font-weight: bold;
 text-transform: uppercase;
 text-decoration: none;
 color: black;
