--- a/inyro/yunjinbar.css
+++ b/inyro/yunjinbar.css
@@ -10,14 +10,14 @@ font-family: "Helvetica Neue", Helvetica, sans-serif;
 
 position: relative;
 text-align: center;
-margin: 50px;
+/* margin: 50px; */
 }
 
 #menu-line{
 display: block;
 position: absolute;
 left: 50%;
-top: 25px;
+/* top: 25px; */
 width: 0;
 height: 5px;
 background-color: black;
