--- a/inyro/inyrobar.css
+++ b/inyro/inyrobar.css
@@ -7,7 +7,7 @@ header {
   height: 75px;
   padding: 1rem;
   color: white;
-  background: teal;
+  background: #FFD749;
   font-weight: bold;
   display: flex;
   justify-content: space-between;
@@ -16,6 +16,8 @@ header {
 
 h1, p {
   margin: 0;
+  text-shadow: 2px 2px 2px black;
+  text: bold;
 }
 
 main {
@@ -33,4 +35,8 @@ body, html {
 
 * {
   box-sizing: border-box;
+}
+
+nav span {
+  color: black;
 }
