--- a/inyro/menubar.css
+++ b/inyro/menubar.css
@@ -22,6 +22,7 @@
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #4CAF50;
+  background-color: #FF5353;
   color: white;
+
 }
