--- a/inyro/menubar.css
+++ b/inyro/menubar.css
@@ -7,7 +7,7 @@
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
-  color: #F2F2F2;
+  color: black;
   text-align: center;
   padding: 14px 154px;
   text-decoration: none;
