--- a/inyro/inyrobar.css
+++ b/inyro/inyrobar.css
@@ -4,7 +4,7 @@ header {
   left: 0;
   right: 0;
 
-  height: 75px;
+  height: 73px;
   padding: 1rem;
   color: white;
   background: #FFD749;
@@ -14,7 +14,7 @@ header {
   align-items: center;
 }
 
-h1, p {
+h1{
   margin: 0;
   text-shadow: 2px 2px 2px black;
   text: bold;
